2008-11-24  kitone  <kitone@gna.org>

	* src/gui/treeviewextensionmanager.cc:
	* src/gui/treeviewextensionmanager.h:
	Sort the extensions by categorie and by locale name. Add separator between
	categories.

2008-11-24  kitone  <kitone@gna.org>

	* plugins/actions/videoplayermanagement/videoplayermanagement.cc:
	* plugins/actions/viewmanager/viewmanager.cc:
	Fix typo. (Patch: Luboš Staněk)

2008-11-24  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	Fix typo. (Patch: Luboš Staněk)

2008-11-24  kitone  <kitone@gna.org>

	* acinclude.m4:
	* configure.in:
	Speeds up the build with ccache option. (Patch: Luboš Staněk)

2008-11-22  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/errorcheckingplugin.cc:
	* plugins/actions/spellchecking/spellchecking.cc:
	* share/menubar.xml:
	Add placeholder 'checking'.

2008-11-22  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Rename "Open Waveform" to "Open Waveform From File".

2008-11-22  kitone  <kitone@gna.org>

	* src/gui/dialogfilechooser.cc:
	Add file filter "Waveform & Media" (default).

2008-11-22  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Add action "Generate Wavefrom From Video". Don't reload the player if the
	file is the same.

2008-11-22  kitone  <kitone@gna.org>

	* src/player.h:
	* src/vp/gstreamerplayer.cc:
	* src/vp/gstreamerplayer.h:
	Add function get_uri.

2008-11-22  kitone  <kitone@gna.org>

	* plugins/actions/joindocument/joindocument.cc:
	Move subtitles added after the last original subtitle.

2008-11-20  kitone  <kitone@gna.org>

	* plugins/actions/errorchecking/toolongdisplaytime.h:
	* plugins/actions/errorchecking/tooshortdisplaytime.h:
	Remove ngettext for gettext.

2008-11-17  kitone  <kitone@gna.org>

	* src/we/waveformrenderergl.cc:
	Fix: Restore header <gl/gl.h> to <GL/gl.h>.

2008-11-16  kitone  <kitone@gna.org>

	* all files {h,cc}:
	convert all files to lowercase.
