@@ -1,3 +1,11 @@
+2008-11-25  kitone  <kitone@gna.org>
+
+	* TODO:
+	Update.
+
+	* plugins/actions/spellchecking/spellchecking.cc:
+	Catch enchant exception.
+
 2008-11-24  kitone  <kitone@gna.org>
 
 	* src/gui/treeviewextensionmanager.cc:
